Added caching of GO files
Added caching of GO files and structure of terms.

--- a/notebooks/basic_testing.ipynb
+++ b/notebooks/basic_testing.ipynb
@@ -172,8 +172,7 @@
     "        except IOError:\n",
     "            print(\"File not available for date:\", d, sys.exc_info())\n",
     "        except:\n",
-    "            print(sys.exc_info())\n",
-    "            "
+    "            print(sys.exc_info())"
    ]
   },
   {
@@ -1168,7 +1167,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1181,7 +1182,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
